--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,6 +27,7 @@
 @import 'components/stay-page/reviews-list.scss';
 @import 'components/stay/order.scss';
 @import 'components/stay-page/reviews-modal.scss';
+@import 'components/stay-page/stay-amenitues.scss';
 
 
 
