--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -1,12 +1,11 @@
 
-
-
 .stay-details-order{
     display: flex;
     align-items: center;
 
-    // .order-now{
-    //     position: sticky;
-    // }
+    .order-now{
+        
+        position: sticky;
+    }
 
 }
