--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -7,7 +7,8 @@ body {
     width: 100%;
     height: 100%;
     font-family: circular;
-    background-color: rgb(250, 250, 250);
+    // background-color: rgb(250, 250, 250);
+    background-color: black;
 
     #root {
         margin: 0;
