--- a/src/styles/components/stay-page/reviews-list.scss
+++ b/src/styles/components/stay-page/reviews-list.scss
@@ -8,5 +8,10 @@
         margin: 0;
         padding: 0;
         width: 90%;
+
+        h5 {
+            color: rgb(113, 113, 113)
+            
+        }
     }
 }
