--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -46,6 +46,10 @@
         .review-preview-container{
             width: 100%;
             
+            h5{
+                color: rgb(113, 113, 113);
+            }
+
             p{
                 padding-right: 10%;
             }
