--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -17,13 +17,14 @@
         overflow: auto;
         border-radius: 20px;
         display: grid;
-        grid-gap: 10px;
+        grid-gap: 20px 10px;
         grid-template-columns: 1fr 2fr;
         grid-template-rows: 10% 20% 70%;
 
         .stay-reviews-header{
             grid-column: 1/2;
             grid-row: 1/2;
+
         }
 
         .review-states{
