--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -36,7 +36,50 @@ input, label {
     display: flex;
     justify-content: center;
     align-items: center;
+
+
+    .login-slide-modal {
+        width: 80px;
+        background-color: rgb(255, 255, 255);
+        height: 0;
+        border: 1px solid rgba(25, 25, 25, 0.609);
+        border-radius: 20px 0 20px 20px;
+        padding: 4px 6px 4px 6px;
+        display: none;
+        position: fixed;
+        top: 91px;
+        right: 35px;
+        justify-content: center;
+        align-items: center;
+
+        .login-opt-btn{
+            padding:3px;
+            width: 100%;
+            border-radius: 20px 20px 20px 20px;
+            display: flex;
+            justify-content: center;
+
+            &:hover {
+                background-color: rgb(115, 119, 120);
+                color: rgb(232, 237, 238);
+            } 
+        }
+
+
+        .login-slide-modal-open & {
+
+            display: flex;
+            gap: 5px;
+            flex-direction: column;
+            height: 88px;
+            transition: 0.4s;
+
+        }
+    }
+
 }
+
+
 
 .nav-btn {
     cursor: pointer;
