--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -6,6 +6,14 @@
     .stay-info-container {
         // justify-content: center;
         align-items: center;
+        // width: 35%;
+        justify-content: space-between;
+    }
+
+    .info-user-btns{
+        align-items: center;
+        width: 20%;
+        justify-content: space-around;
     }
 
     .reviews-modal-btn {
