--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -34,7 +34,7 @@ body {
                 top: 0;
                 grid-row: 1/2;
                 grid-column: 1/-1;
-                background-color: rgb(253, 253, 253, 1);
+                background-color: rgb(250, 250, 250);
                 z-index: 20;
                 padding-left: 20px;
                 padding-right: 20px;
