--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -1,18 +1,18 @@
-.reviews-modal{
+.reviews-modal {
     // height: 300px;
     // width: 300px;
-    width: 800px;
-    border: 2px solid rgba(44, 44, 44, 0.851);
+    width: 100%;
+    border: 1px solid rgba(200, 200, 200, 0.851);
     border-radius: 20px;
-    background-color: white;
+    background-color: rgb(248, 248, 248);
     z-index: 10;
 
     // border: 5px solid black;
     // .modal-header{
-        
-        // }
-        
-        .stay-reviews{
+
+    // }
+
+    .stay-reviews {
         height: 500px;
         overflow: auto;
         border-radius: 20px;
@@ -22,44 +22,48 @@
         grid-template-columns: 1.5fr 2fr;
         grid-template-rows: 10% 20% 70%;
 
-        .stay-reviews-header{
+        .stay-reviews-header {
             grid-column: 1/2;
             grid-row: 1/2;
+            position: sticky;
+            top:20px;
 
         }
 
-        .review-states{
+        .review-states {
             grid-column: 1/2;
             grid-row: 2/3;
+            position: sticky;
+            top:80px;
 
 
-            .stay-scores{
+            .stay-scores {
                 display: flex;
                 flex-direction: column;
                 padding-left: 10px;
             }
         }
 
-        .reviews-list-container{
+        .reviews-list-container {
             display: flex;
             flex-direction: column;
             padding: 5%;
         }
 
-        .review-preview-container{
+        .review-preview-container {
             width: 100%;
-            
-            h5{
+
+            h5 {
                 color: rgb(113, 113, 113);
             }
 
-            p{
+            p {
                 padding-right: 10%;
             }
         }
     }
 
-    .modal-header span{
+    .modal-header span {
         cursor: pointer;
         margin: 10px;
         padding: 10px;
