--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -73,7 +73,7 @@
 
     .guests-modal {
         display: none;
-
+        
         .guests-modal-open & {
             display: block;
             z-index: 10;
@@ -82,8 +82,10 @@
 
         .incDec-line {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
+            width:90%;
+            padding: 0 5%;
 
             .set-guests {
                 display: flex;
