--- a/src/styles/components/stay-page/stay-scores.scss
+++ b/src/styles/components/stay-page/stay-scores.scss
@@ -7,11 +7,13 @@
     
     .review-category{
         display: flex;
+       
         align-items: center;
         justify-content: space-between;
         
         .score-category-container{
             align-items: center;
+            width: 150px;
             justify-content: space-between;
         }
 
