--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -4,6 +4,7 @@
     width: 100%;
     border: 1px solid rgba(200, 200, 200, 0.851);
     border-radius: 20px;
+    border-bottom-right-radius: 0px;
     background-color: rgb(248, 248, 248);
     z-index: 10;
 
