--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -1,14 +1,15 @@
-html{
+html {
     height: 100%;
     width: 100%;
 }
+
 body {
     margin: 0;
     width: 100%;
     height: 100%;
     font-family: circular;
     background-color: rgb(250, 250, 250);
-   
+
     #root {
         margin: 0;
         height: 100%;
@@ -34,27 +35,31 @@ body {
                 top: 0;
                 grid-row: 1/2;
                 grid-column: 1/-1;
-                background-color: rgb(250, 250, 250);
+                // background-color: rgb(250, 250, 250);
                 z-index: 20;
                 padding-left: 20px;
                 padding-right: 20px;
 
                 .header {
                     width: 100%;
+                    height: 150px;
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
                     align-self: center;
 
                     .searchbar {
-                        background-color: rgb(245, 245, 245, 0.9);
+                        position: sticky;
+                        top: 50px;
+                        align-self: flex-end;
+                        background-color: rgb(245, 245, 245);
                         border-radius: 35px;
                         max-width: 750px;
                         min-height: 50px;
                         display: flex;
                         justify-content: space-between;
                         border: 1px solid rgb(200, 200, 200);
-                        box-shadow: 0px 2px 5px rgb(200, 200, 200);
+                        box-shadow: 0px 2px 5px rgba(200, 200, 200, 0.5);
                         transition: 0.4s;
 
                         &:hover {
@@ -120,6 +125,7 @@ body {
 
                     .header-navbar {
                         max-width: 400px;
+                        color: rgb(245, 245, 245);
                         display: flex;
                         flex-wrap: wrap;
 
@@ -128,14 +134,15 @@ body {
                         }
                     }
                 }
-                .user-navbar{
+
+                .user-navbar {
                     cursor: pointer;
                 }
 
 
 
                 img {
-                    max-width: 250px;
+                    max-height: 50px;
                     cursor: pointer;
                 }
             }
@@ -145,6 +152,7 @@ body {
                 grid-column: 1/-1;
                 display: grid;
                 grid-template-columns: 5% 1fr 5%;
+                
                 // grid-template-areas: ". hero ."
                 //     ". destinations. ";
 
@@ -172,7 +180,9 @@ body {
                         }
 
                         .hero-img {
+                            position: absolute;
                             top: 0;
+                            left: 0%;
                             max-height: 950px;
                             width: 100%;
                             grid-area: "hero";
@@ -196,9 +206,9 @@ body {
                             cursor: pointer;
 
                             &:hover {
-                                background-color: rgb(255, 90, 95);
-                                color: rgba(250, 250, 250, 0.9);
-                                border: 2px solid rgb(255, 90, 95);
+                                // color: rgba(250, 250, 250, 0.9);
+                                // background-color: rgb(255, 90, 95);
+                                border: 2px solid rgb(37, 37, 37);
                                 transition: 0.3s;
                             }
 
@@ -207,6 +217,8 @@ body {
                     }
 
                     .destinations-container {
+                        position: relative;
+                        top: 800px;
                         grid-area: "destinations";
                         grid-column: 2;
                         grid-row: 2;
@@ -259,7 +271,7 @@ body {
                         align-self: center;
                     }
 
-                   
+
                 }
 
                 .stay-page {
@@ -278,8 +290,9 @@ body {
             }
 
             .AppFooter {
-                grid-row: -2;
-                grid-column: 1/-1;
+                position: fixed;
+                bottom: 0;
+                width: 100%;
             }
         }
     }
