--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -3,7 +3,7 @@
     height: 150px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0;
 
     h3 {
@@ -15,37 +15,40 @@
         flex-wrap: wrap;
         justify-content: center;
         align-self: center;
+        font-size: 14px;
 
         .filter-label-btn {
-            width: 94px;
-            min-width: 85px;
-            height: 22px;
-            padding: 10px;
-            padding-left: 20px;
-            padding-right: 20px;
-            margin: 4px;
-            background-color: rgb(240, 240, 240);
-            border: 1px solid rgba(150,150,150,0.5);
-            color: rgb(75, 75, 75);
-            border-radius: 20px;
             display: flex;
             justify-content: center;
-            text-shadow: 0 0 0 2px rgba(200, 200, 200);
+            width: 85px;
+            height: 42px;
+            margin: 4px;
+            border-radius: 20px;
+            color: var(--font-dark-color);
+            background-color: var(--btn-background-color);
+            border: 1px solid var(--font-gray-color);
+            box-shadow: 0 0 2px var(--font-lightgray-color);
+
+            span {
+                align-self: center;
+            }
         }
 
         .filter-label-btn-on {
-            width:  94px;
-            box-shadow: 0 3px 6px 0 rgba(150,150,150,0.5);
-            height: 22px;
-            padding: 10px;
-            padding-left: 20px;
-            padding-right: 20px;
+            width: 85px;
+            height: 42px;
             margin: 4px;
-            background-color: rgb(255, 90, 95);
-            color: rgb(240, 240, 240);
             border-radius: 20px;
             display: flex;
             justify-content: center;
+            color: var(--font-dark-color);
+            background-color: var(--btn-background-color);
+            border: 1px solid var(--font-dark-color);
+            box-shadow: 0 0 2px var(--font-dark-color);
+
+            span {
+                align-self: center;
+            }
         }
 
         .filter-form-label1 {
@@ -58,15 +61,15 @@
             margin-left: 5px;
         }
     }
+
     .slider-container {
-        width: 400px;
+        width: 350px;
+        padding-left: 10px;
+
         align-self: center;
-        .css-187mznn-MuiSlider-root{
-            color:rgb(255, 90, 95);
+
+        .css-187mznn-MuiSlider-root {
+            color: var(--logo-color);
         }
     }
 }
-
-
-
-
