--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -1,56 +1,70 @@
 .list-container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+
     .stay-list {
         align-items: center;
         display: flex;
-        justify-content: space-evenly;
+        width: 100%;
+        justify-content: space-between;
+        // gap: 10px;
         flex-wrap: wrap;
 
         .stay-preview {
-            margin-left: 10px;
-            margin-right: 10px;
             height: 370px;
             width: 270px;
-            // margin: 10px;
             margin-bottom: 20px;
-            margin-top: 0;
             line-height: 18px;
-            background-color: rgb(248, 248, 248);
             border-radius: 20px;
 
             h3 {
                 font-size: 18px;
                 text-align: left;
                 margin-top: 5px;
-                padding-left: 5px;
             }
 
             p {
+                color: var(--font-gray-color);
                 font-size: 14px;
                 text-align: left;
                 margin: 0px;
-                padding-left: 5px;
+
+                strong {
+                    color: var(--font-dark-color);
+                }
             }
 
             &:hover {
-                box-shadow: 0 0 5px rgba(255, 90, 95, 0.3);
-                // background-color: rgb(255, 90, 95);
-                // color: rgba(250, 250, 250, 0.9);
-                // transition: 0.3s;
+                transform: scale(1.1, 1.1);
+                transition: 0.3s;
             }
         }
     }
 }
 
 .locatoing-rating {
+    height: 35px;
     display: flex;
     justify-content: space-between;
-    margin-right: 10px;
-    color: rgb(29, 29, 29);
+    color: var(--font-dark-color);
+
+    h3 {
+        display: flex;
+        align-self: center;
+
+        span {
+            align-self: center;
+        }
+
+        svg {
+            align-self: center;
+        }
+    }
 }
 
 
 .cycle-btn-container {
-
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -60,25 +74,24 @@
 
 .next-btn {
     z-index: 10;
-    background-color: rgba(236, 232, 232, 0.81);
+    background-color: var(--btn-background-color);
     border-radius: 50%;
     opacity: 0;
     width: 30px;
     height: 30px;
     position: relative;
     top: -340px;
-
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(55, 55, 55);
+    color:var(--font-dark-color);
     margin-right: 10px;
     cursor: pointer;
 }
 
 .back-btn {
     z-index: 10;
-    background-color: rgba(236, 232, 232, 0.81);
+    background-color: var(--card-background-color);
     border-radius: 50%;
     opacity: 0;
     width: 30px;
@@ -89,7 +102,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(55, 55, 55);
+    color: var(--font-dark-color);
     cursor: pointer;
 }
 
@@ -112,7 +125,7 @@
         top: -270px;
         left: 235px;
         display: flex;
-        color: rgb(255, 90, 95);
+        color: var(--logo-color);
         font-size: 25px;
         justify-content: center;
         align-items: center;
