--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -8,19 +8,25 @@ body {
     width: 100%;
     height: 100%;
     font-family: circular;
-    background-color: rgb(250, 250, 250);
-
+    box-sizing: border-box;
+    
     #root {
         margin: 0;
+        padding: 0%;
         height: 100%;
         width: 100%;
-
+        display: grid;
+        grid-template-columns: 1fr 5fr 1fr;
+        
+        
         .app {
             height: 100%;
+            grid-column: 2/-2;
             display: grid;
-            grid-template-columns: 5% 1fr 5%;
+            
             grid-template-rows: 150px 1fr 150px;
-
+            color: var(--font-dark-color);
+                        
             >* .full {
                 grid-row: 1/2;
 
@@ -29,15 +35,15 @@ body {
             .AppHeader {
                 display: flex;
                 align-items: center;
-                justify-content: space-evenly;
+                justify-content: space-between;
                 height: 150px;
+                // width: 100%;
                 position: sticky;
                 top: 0;
                 grid-row: 1/2;
                 grid-column: 1/-1;
-                // background-color: rgb(250, 250, 250);
                 z-index: 20;
-                padding: 0 5%;
+
 
                 .header {
                     width: 100%;
@@ -51,18 +57,18 @@ body {
                         position: sticky;
                         top: 50px;
                         align-self: flex-end;
-                        background-color: rgb(245, 245, 245);
+                        background-color: var(--card-background-color);
                         border-radius: 35px;
                         max-width: 750px;
                         min-height: 50px;
                         display: flex;
                         justify-content: space-between;
-                        border: 1px solid rgb(200, 200, 200);
-                        box-shadow: 0px 2px 5px rgba(200, 200, 200, 0.5);
+                        border: 1px solid var(--font-lightgray-color);
+                        box-shadow: 0px 2px 5px var(--font-gray-color);
                         transition: 0.4s;
 
                         &:hover {
-                            box-shadow: 0px 4px 12px rgb(200, 200, 200);
+                            box-shadow: 0px 4px 12px var(--font-lightgray-color);
                             transition: 0.4s;
                         }
 
@@ -97,7 +103,7 @@ body {
                             width: 175px;
                             text-align: center;
                             border-radius: 35px;
-                            background-color: rgb(245, 245, 245, 0.9);
+                            background-color: var(--card-background-color);
                             transition: 0.3s;
 
 
@@ -126,7 +132,7 @@ body {
 
                     .header-navbar {
                         max-width: 400px;
-                        color: rgb(200, 200, 200);
+                        color: var(--main-background-color);
                         display: flex;
                         flex-wrap: wrap;
 
@@ -152,12 +158,7 @@ body {
             main {
                 grid-row: 2/-2;
                 grid-column: 1/-1;
-                display: grid;
-                grid-template-columns: 5% 1fr 5%;
-
-                // grid-template-areas: ". hero ."
-                //     ". destinations. ";
-
+                
 
                 .home-page {
                     text-align: center;
@@ -166,19 +167,13 @@ body {
 
                     .hero-container {
 
-                        //     top: 0;
-                        //     width: 100vh;
-                        //     background-repeat: no-repeat;
-                        //     grid-area: "hero";
-                        //     background-image: url("../../../assets/Images/hero.png");
-
                         .centered {
                             font-size: 4rem;
                             position: absolute;
                             top: 50%;
                             left: 50%;
                             transform: translate(-50%, -50%);
-                            color: rgb(250, 250, 250, 0.9);
+                            color: var(--main-background-color);
                         }
 
                         .hero-img {
@@ -187,7 +182,6 @@ body {
                             left: 0%;
                             max-height: 950px;
                             width: 100%;
-                            grid-area: "hero";
                             object-fit: cover;
                             z-index: -1;
                         }
@@ -200,17 +194,15 @@ body {
                             top: 75%;
                             left: 50%;
                             transform: translate(-50%, -50%);
-                            background-color: rgba(250, 250, 250, 0.9);
+                            background-color: var(--main-background-color);
                             border-radius: 20px;
                             width: 200px;
                             height: 30px;
-                            border: 2px solid rgba(200, 200, 200, 0.5);
+                            border: 2px solid var(var(--main-background-color));
                             cursor: pointer;
 
                             &:hover {
-                                // color: rgba(250, 250, 250, 0.9);
-                                // background-color: rgb(255, 90, 95);
-                                border: 2px solid rgb(37, 37, 37);
+                                border: 2px solid var(--font-dark-color);
                                 transition: 0.3s;
                             }
 
@@ -222,7 +214,6 @@ body {
                         position: relative;
                         top: 800px;
                         height: 60vh;
-                        grid-area: "destinations";
                         grid-column: 2;
                         grid-row: 2;
                         text-align: center;
@@ -242,12 +233,9 @@ body {
                                 height: 350px;
                                 width: 300px;
                                 margin-left: 15px;
-                                background-color: rgb(245, 245, 245);
+                                background-color: var(--card-background-color);
 
                                 &:hover {
-                                    // box-shadow: 0 0 5px rgba(255, 90, 95, 0.1);
-                                    // background-color: rgb(255, 90, 95);
-                                    // color: rgba(250, 250, 250, 0.9);
                                     transform: scale(1.1, 1.1);
                                     transition: 0.3s;
                                 }
@@ -287,7 +275,7 @@ body {
                             margin-top: 15px;
                             row-gap: 15px;
                             border-radius: 20px;
-                            background-color: rgb(250, 250, 250);
+                            background-color: var(--main-background-color);
                         }
                     }
                 }
