--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -3,7 +3,6 @@
     align-items: center;
     justify-content: space-between;
     height: 150px;
-    // width: 100%;
     position: sticky;
     top: 0;
     grid-row: 1/2;
@@ -12,26 +11,29 @@
 
 
     .header {
+        align-self: center;
         width: 100%;
         height: 150px;
         display: flex;
+        flex-direction: row;
         align-items: center;
-        justify-content: space-between;
-        align-self: center;
+        justify-content: center;
+        
 
         .searchbar {
-            position: sticky;
-            top: 50px;
+
             align-self: flex-end;
             background-color: var(--card-background-color);
             border-radius: 35px;
-            max-width: 750px;
+            max-width: 575px;
             min-height: 50px;
             display: flex;
             justify-content: space-between;
             border: 1px solid var(--font-lightgray-color);
             box-shadow: 0px 2px 5px var(--font-gray-color);
             transition: 0.4s;
+            position: sticky;
+            top: 50px;
 
             &:hover {
                 box-shadow: 0px 4px 12px var(--font-lightgray-color);
@@ -66,7 +68,7 @@
                 flex-direction: column;
                 justify-content: center;
                 align-self: center;
-                width: 175px;
+                width: 125px;
                 text-align: center;
                 border-radius: 35px;
                 background-color: var(--card-background-color);
@@ -97,14 +99,16 @@
         }
 
         .header-navbar {
-            max-width: 400px;
+            max-width: 280px;
+            font-size: 16px;
             color: var(--main-background-color);
             display: flex;
+            align-items: center;
             flex-wrap: wrap;
-
+            gap: 4px;
 
             .nav-btn .host {
-                width: 125px;
+                width: 100px;
             }
         }
     }
@@ -130,30 +134,20 @@
 .searchbar-form {
 
     display: flex;
-    gap: 2%;
+    gap: 5px;
 }
 
-input, label {
-    display:block;
+input,
+label {
+    display: block;
 }
 
-.header-navbar {
-    display: flex;
-    gap: 12px;
-    align-items: center;
-    font-size: 20px;
-}
-// .header-navbar-container {
-//     position: absolute;
-//     top: 40px;
-//     right:70px;
-// }
 
 .user-navbar {
     border: 1px solid rgba(25, 25, 25, 0.609);
     border-radius: 20px;
     padding: 4px 6px 4px 6px;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -175,15 +169,16 @@ input, label {
         align-items: center;
 
         :first-child {
-            border-radius: 20px 0 0  0;
+            border-radius: 20px 0 0 0;
             padding-top: 8px;
         }
+
         :last-child {
-            border-radius: 0 0 20px  20px;
+            border-radius: 0 0 20px 20px;
         }
 
-        .login-opt-btn{
-            margin:0;
+        .login-opt-btn {
+            margin: 0;
             gap: 5px;
             width: 100%;
             // border-radius: 20px 20px 20px 20px;
@@ -193,7 +188,7 @@ input, label {
             &:hover {
                 background-color: rgb(200, 200, 200);
                 // color: rgb(245, 245, 245);
-            } 
+            }
         }
 
 
@@ -219,5 +214,5 @@ input, label {
 
 .labels-flex {
     display: flex;
-    
+
 }
