--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,7 @@
 // @import 'basics/layout';
 
 // COMPONENTS
+@import 'components/user-msg.scss';
 
 // HEADER
 @import 'components/header/header.scss';
