--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -65,73 +65,12 @@ justify-items: center;
     padding-top: 81px;
     min-height: calc(100vh - 100px);
 }
-// .main-layout{
-//     max-width: 1020px;
-//     margin: 0 auto;
-// }
-// Media helpers
+
 
 .square-ratio {
      aspect-ratio:(1,1);
 }
-// .video-ratio {
-//     @include aspect-ratio(16, 9);
-// }
-// .portrait-ratio {
-//     @include aspect-ratio(9, 16);
-// }
 
-// Main Layout Helper
-// @media (max-width: $narrow-breakpoint) {
-//     .main-layout {
-//         width: 90%;
-//     }
-// }
-// @media (max-width: $mobile-breakpoint) {
-//     .main-layout {
-//         width: 100%;
-//     }
-// }
-// @media (min-width: $mobile-breakpoint) {
-//     .main-layout {
-//         width: 100%;
-//     }
-// }
-// @media (min-width: $narrow-breakpoint) {
-//     .main-layout {
-//         min-width: 580px;
-//         max-width: 888px;
-//         width: 80%;
-//         margin: 0 auto;
-//         padding: 0 20px;
-//     }
-// }
-// @media (min-width: $normal-breakpoint) {
-//     .main-layout {
-//         min-width: 888px;
-//         max-width: 1200px;
-//         margin: 0 auto;
-//         width: 80%;
-//         padding: 0 20px;
-//     }
-// }
-// @media (min-width: $wide-breakpoint) {
-//     .main-layout {
-//         min-width: 1200px;
-//         max-width: 1360px;
-//         margin: 0 auto;
-//         width: 80%;
-//         padding: 0 20px;
-//     }
-// }
-// @media (min-width: $wide-breakpoint) {
-//     .main-layout {
-//         min-width: 1360px;
-//         margin: 0 auto;
-//         width: 90%;
-//         padding: 0 20px;
-//     }
-// }
 .DateRangePickerInput_arrow {
     display: none;
 }
@@ -148,4 +87,9 @@ justify-items: center;
 
 .opened{
     display: block;
+}
+
+.sticky{
+    position: fixed;
+    top:50px;
 }
