--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -1,12 +1,12 @@
 .stay-page {
-    padding: 0 15%;
+    padding: 0 5%;
     grid-row: 2/-2;
     grid-column: 2/-2;
 
     .stay-info-container {
         // justify-content: center;
         align-items: center;
-        // width: 35%;
+        width: 400px;
         justify-content: space-between;
     }
 
