--- a/src/styles/components/stay-page/amenities-modal.scss
+++ b/src/styles/components/stay-page/amenities-modal.scss
@@ -1,15 +1,19 @@
 .amenities-modal {
-    width: 100%;
+    position: absolute;
+    width: 100vh;
+    max-height: 700px;
+    top: 80%;
+    right: 50%;
+    transform: translate(50%, 50%);
+    overflow: auto;
     border: 1px solid var(--font-lightgray-color);
     border-radius: 20px;
-    border-bottom-right-radius: 0px;
-    background-color: var( --card-background-color);
+    background-color: var(--card-background-color);
     z-index: 1000;
 
 
+
     .stay-amenities {
-        height: 500px;
-        overflow: auto;
         border-radius: 20px;
         padding: 2%;
         display: grid;
@@ -21,7 +25,7 @@
             grid-column: 1/2;
             grid-row: 1/2;
             position: sticky;
-            top:20px;
+            top: 20px;
 
         }
 
@@ -29,7 +33,7 @@
             grid-column: 1/2;
             grid-row: 2/3;
             position: sticky;
-            top:80px;
+            top: 80px;
 
 
             .stay-scores {
@@ -43,6 +47,7 @@
             display: flex;
             flex-direction: column;
             padding: 5%;
+            padding-top: 0;
         }
 
         .review-preview-container {
@@ -58,10 +63,30 @@
         }
     }
 
-    .modal-header span {
-        cursor: pointer;
-        margin: 10px;
-        padding: 10px;
-    }
+    .modal-header {
+        display: flex;
+        justify-content: flex-end;
+        padding-top: 15px;
+        padding-right: 15px;
 
+        span {
+            cursor: pointer;
+        }
+
+    }
+}
+
+.amenities-screen {
+    pointer-events: none;
+    position: fixed;
+    inset: 0;
+    z-index: -1;
+    height: 100vh;
+    width: 100vw;
+
+    &.screen-open {
+        background-color: var(--font-gray-see-throw-color);
+        pointer-events: all;
+        z-index: 50;
+    }
 }
