--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -1,13 +1,18 @@
 .reviews-modal {
-    width: 100%;
+    position: absolute;
+    width: 100vh;
+    height: 85vh;
+    top: 120%;
+    right: 50%;
+    transform: translate(50%, 50%);
+
     border: 1px solid var(--font-lightgray-color);
     border-radius: 20px;
-    border-bottom-right-radius: 0px;
-    background-color: var( --card-background-color);
-    z-index: 1000;
+    background-color: var(--card-background-color);
+    z-index: 100;
 
     .stay-reviews {
-        height: 500px;
+        height: 750px;
         overflow: auto;
         border-radius: 20px;
         padding: 2%;
@@ -20,15 +25,15 @@
             grid-column: 1/2;
             grid-row: 1/2;
             position: sticky;
-            top:20px;
+            top: 20px;
 
         }
 
         .review-states {
             grid-column: 1/2;
             grid-row: 2/3;
-            position: sticky;
-            top:80px;
+            position: relative;
+            top: 10px;
 
 
             .stay-scores {
@@ -57,10 +62,33 @@
         }
     }
 
-    .modal-header span {
-        cursor: pointer;
-        margin: 10px;
-        padding: 10px;
+    .modal-header {
+        display: flex;
+        justify-content: flex-end;
+        height: 45px;
+        padding-right: 15px;
+        padding-top: 15px;
+
+        & span {
+            cursor: pointer;
+            margin: 10px;
+            padding: 10px;
+        }
     }
 
+}
+
+.screen {
+    pointer-events: none;
+    position: fixed;
+    inset: 0;
+    z-index: -1;
+    height: 100vh;
+    width: 100vw;
+
+    &.screen-open {
+        background-color: var(--font-gray-see-throw-color);
+        pointer-events: all;
+        z-index: 50;
+    }
 }
