--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -56,7 +56,7 @@
         position: relative;
         display: block;
         margin-top: 700px;
-        height: 60vh;
+        // height: 60vh;
         grid-column: 2;
         grid-row: 2;
         text-align: center;
