--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -166,3 +166,22 @@
         justify-content: space-between;
     }
 }
+
+.backoffice-btn-flex {
+    display: flex;
+    
+}
+
+.backoffice-preview-btn{ 
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 0;
+    border-radius: 10px;
+    background-color: var(--logo-color);
+    color: var(--main-background-color);
+    padding: 10px;
+    margin: 5px;
+    margin-left: 0;
+}
