--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -246,7 +246,7 @@
             background-color: #fff;
             color: var(--font-dark-color);
             cursor: pointer;
-            border: 1px solid var(--font-dark-color);
+            border: 1px solid var(--font-lightgray-color);
             border-radius: 20px;
             padding: 4px 6px 4px 6px;
             gap: 5px;
@@ -257,17 +257,33 @@
                 aspect-ratio: 0.7/1;
             }
 
+            .dehaze {
+                margin-left: 5px;
+            }
+
+            .red-dot {
+                height: 11px;
+                width: 11px;
+                border-radius: 50%;
+                background-color: var(--logo-color);
+                position: absolute;
+                top: 23%;
+                right: 11.1%;
+                border: 2px solid white;
+                
+            }
+
 
             .login-slide-modal {
                 color: var(--font-dark-color);
-                width: 120px;
+                width: 160px;
                 background-color: var(--main-background-color);
                 border: 1px solid var(--font-lightgray-color);
                 border-radius: 10px;
                 display: none;
-                position: fixed;
-                top: 95px;
-                right: 200px;
+                position: absolute;
+                top: 65px;
+                right: 184px;
                 justify-content: center;
                 align-items: center;
 
@@ -284,10 +300,24 @@
                 .login-opt-btn {
                     margin: 0;
                     gap: 5px;
-                    width: 100%;
+                    width: 80%;
                     // border-radius: 20px 20px 20px 20px;
                     display: flex;
-                    justify-content: center;
+                    flex-direction: row;
+                    height: 1.1em;
+                    justify-content: flex-start;
+                    margin-left: 20px;
+                    // overflow: hidden;
+                    // box-sizing: border-box;
+
+                    .noti-icon {
+
+                       position: absolute;
+                       top: 12px;
+                       right: 10px;
+                       color: var(--logo-color)
+                    }
+
 
                     &:hover {
                         background-color: var(--btn-background-color);
@@ -307,7 +337,28 @@
                     justify-content: space-evenly;
                     height: 160px;
                     transition: 0.4s;
+                    padding: 2px;
                 }
+            }
+
+            .noti-tab {
+
+                color: var(--font-dark-color);
+                width: 200px;
+                background-color: var(--main-background-color);
+                border: 1px solid var(--font-lightgray-color);
+                border-radius: 10px 0 10px 10px;
+                position: absolute;
+                top: 36px;
+                right: 164px;
+                padding: 6px;
+                justify-content: center;
+                align-items: center;
+
+                .noti-btn {
+                    margin: 5px;
+                }
+
             }
         }
 
@@ -336,3 +387,4 @@ label {
     height: 30px;
     width: 30px;
 }
+
